fix: Scrolling on mobile

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,4 +3,5 @@
   align-items: center;
   flex-direction: column;
   height: 90vh;
+  touch-action: pan-y !important;
 }
